--- a/Project_3.Rmd
+++ b/Project_3.Rmd
@@ -11,6 +11,9 @@ set.seed(152)
 
 library(tidyverse)
 library(readr)
+library(caret)
+library(ggplot2)
+library(corrplot)
 ```
 
 ## Introduction
@@ -56,13 +59,47 @@ news.vars <- c('n_tokens_title', 'n_tokens_content', 'n_non_stop_words', 'num_hr
 
 For the first iteration of our analysis, we will be using a single source for data channel. In other words, we will subset the data to one data channel here, and later, automate the process across all of the channels.
 
-So, we read in the data and subset it to our chosen variables and the `Tech` data channel:
+So, we read in the data and subset it to our chosen variables (`is_weekend` converted into factor) and the `Tech` data channel:
 
 ```{r read data}
 news <- read_csv("OnlineNewsPopularity.csv")
 
-tech.news <- news %>% filter(data_channel_is_tech == 1) %>% select(all_of(news.vars), shares) 
+tech.news <- news %>% filter(data_channel_is_tech == 1) %>% 
+  select(all_of(news.vars), shares) %>%
+  mutate(is_weekend = as.factor(is_weekend))
+
 head(tech.news)
 ```
-
 ## Summarizations
+Now that our data has been manipulated and filtered, we can perform a simple EDA.
+
+### Summary Statistics
+First and foremost, we want to know what range of values we might expect when predicting for `shares`. The following table shows basic summary statistics about the variable:
+
+```{r five_sum}
+s <- summary(tech.news$shares)
+
+tibble(var = 'shares', min = s[1], max = s[6], mean = s[3], stddev = sd(tech.news$shares))
+```
+If the maximum is tremendously larger in scale than the mean, then it is very likely an outlier. If the standard deviation is larger than the mean, then the number of shares varies greatly. Furthermore, the higher it is, the more disperse they are from the mean. The inverse also applies for a smaller standard deviation (i.e. the smaller, the less disperse).
+
+### Plots
+For visual analysis, we first construct a density plot to compare the distribution of `shares` between the weekend (`is_weekend = 1`) and weekdays (`is_weekend = 0`). Observe the patterns generated for similarities and/or differences.
+
+```{r density}
+g <- ggplot(data = tech.news, aes(x = shares))
+
+g + geom_density(adjust = 0.5, alpha = 0.5, aes(fill = is_weekend)) +
+  xlim(0, 8000)
+
+```
+
+## Modeling
+The goal now is to create models for predicting the number of `shares` using linear regression and ensemble trees. Before that, the data is split into a training (70%) and test (30%) set.
+
+```{r split}
+i <- createDataPartition(tech.news[[1]], p = 0.75, list = FALSE)
+
+train <- tech.news[i,]
+test <- tech.news[-i,]
+```
