--- a/Project_3.Rmd
+++ b/Project_3.Rmd
@@ -95,16 +95,6 @@ s <- summary(tech.news$shares)
 tibble(var = 'shares', min = s[1], max = s[6], mean = s[3], stddev = sd(tech.news$shares))
 ```
 
-```{r sumData, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
-
-  countNonStopWords <- tech.news %>% 
-  group_by(global_subjectivity) %>%
-  summarise(total_count=n(),
-            .groups = 'drop')
-  
-  countNonStopWords
-  
-```
 If the maximum is tremendously larger in scale than the mean, then it is very likely an outlier. If the standard deviation is larger than the mean, then the number of shares varies greatly. Furthermore, the higher it is, the more disperse they are from the mean. The inverse also applies for a smaller standard deviation (i.e. the smaller, the less disperse).
 
 It would also be good to know relationships between some of the variables present--and not just to `shares`. Observe the following correlation matrix of variables related to content sentiment. A value of 0 indicates no correlation and 1 indicates perfect correlation. The closer a value is to 1(+/-), the stronger the relationship is. The closer to 0, the weaker.
@@ -121,6 +111,22 @@ c <- tech.news %>%
 round(cor(c),2)
 ```
 
+The new variable **popularity** is set up so that news is considered `popular` if it receives more shares than the median shares, else it is considered `unpopular`.`table()` gives details about **count** of popular and unpopular news.
+```{r tablePopCount, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+
+  tech.news$popularity <- ifelse(tech.news$shares < median(tech.news$shares),
+  "Unpopular", "Popular"
+)
+
+table(tech.news$popularity)
+  
+```
+The contingency table below depicts the relationship between the **popularity** of a news channel and whether or not it was **published on the weekend**. It informs us whether or not popular news was published over the weekend. Whether or not unpopular news was published over the weekend.
+```{r conTable, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+
+   table(tech.news$popularity,tech.news$is_weekend)
+
+```
 
 ### Plots
 For visual analysis, we first construct a density plot to compare the densities of `shares` between the weekend (`is_weekend = 1`) and weekdays (`is_weekend = 0`). Observe the patterns generated for similarities and/or differences.
